--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,3 +1,7 @@
 {{ define "main" }}
   {{ partial "galleriesdeluxe/list-gallery.html" . }}
 {{ end }}
+
+{{ define "head-custom" }}
+  {{ partial "gallerydeluxe/head.html" . }}
+{{ end }}
