--- a/assets/scss/galleriesdeluxe/markdown.scss
+++ b/assets/scss/galleriesdeluxe/markdown.scss
@@ -2,11 +2,11 @@
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   margin: 0;
-  color: #24292f;
-  background-color: #ffffff;
   font-family: inherit;
   line-height: 1.5;
+  font-size: 1.25em;
   word-wrap: break-word;
+  max-width: 90ch;
 }
 
 .markdown-body .octicon {
