--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,6 +6,8 @@
       {{ .Title }}
     </title>
 
+    <link rel="icon" href="{{ `favicon.svg` | relURL }}" type="image/svg+xml" />
+
     <meta name="viewport" content="width=device-width,minimum-scale=1" />
     {{ hugo.Generator }}
 
