--- a/assets/scss/galleriesdeluxe/vars.scss
+++ b/assets/scss/galleriesdeluxe/vars.scss
@@ -24,3 +24,5 @@ $font-family-sans-serif: Seravek, "Gill Sans Nova", Ubuntu, Calibri,
   "DejaVu Sans", source-sans-pro, sans-serif !default;
 
 $font-family-base: $font-family-sans-serif !default;
+
+$breakpoint-md: 768px !default;
