--- a/assets/scss/galleriesdeluxe/vars.scss
+++ b/assets/scss/galleriesdeluxe/vars.scss
@@ -1,28 +1,29 @@
 /* Colors. */
 $white: #fff !default;
-$gray-100: #f8f9fa !default;
-$gray-200: #e9ecef !default;
-$gray-300: #dee2e6 !default;
-$gray-400: #ced4da !default;
-$gray-500: #adb5bd !default;
-$gray-600: #6c757d !default;
-$gray-700: #495057 !default;
-$gray-800: #343a40 !default;
-$gray-900: #212529 !default;
+$gray_100: #f8f9fa !default;
+$gray_200: #e9ecef !default;
+$gray_300: #dee2e6 !default;
+$gray_400: #ced4da !default;
+$gray_500: #adb5bd !default;
+$gray_600: #6c757d !default;
+$gray_700: #495057 !default;
+$gray_800: #343a40 !default;
+$gray_900: #212529 !default;
 $black: #000 !default;
 
-$color-primary: #3a98b9 !default;
-$color-secondary: #fff1dc !default;
-$color-text_dark: $black !default;
-$color-text_light: $white !default;
-$color-background: lighten($color-secondary, 60%) !default;
-$color-background-footer: $color-secondary !default;
+$color_primary: #3a98b9 !default;
+$color_secondary: #fff1dc !default;
+$color_text_dark: $black !default;
+$color_text_light: $white !default;
+$color_background: lighten($color_secondary, 60%) !default;
+$color_background_footer: $color_secondary !default;
 
-$font-family-serif: Charter, "Bitstream Charter", "Sitka Text", Cambria, serif !default;
+$font_family_serif: Charter, "Bitstream Charter", "Sitka Text", Cambria, serif !default;
 
-$font-family-sans-serif: Seravek, "Gill Sans Nova", Ubuntu, Calibri,
-  "DejaVu Sans", source-sans-pro, sans-serif !default;
+$font_family_sans_serif: Seravek, "Gill Sans Nova", Ubuntu, Calibri,
+  "DejaVu Sans", source_sans_pro, sans_serif !default;
 
-$font-family-base: $font-family-sans-serif !default;
+$font_family_base: $font_family_sans_serif !default;
+$font_size_base: 16px !default;
 
-$breakpoint-md: 768px !default;
+$breakpoint_md: 768px !default;
