--- a/exampleSite/assets/scss/galleriesdeluxe/vars-custom.scss
+++ b/exampleSite/assets/scss/galleriesdeluxe/vars-custom.scss
@@ -1,6 +1,7 @@
 /* Override any SCSS variable here. */
 
-$color-background: #1d1e2c !default;
+/* $color-background is also defined in site config (params.galleriesdeluxe.sassvars), which will win. */
+$color-background: #fff !default;
 $color-background-footer: darken($color-background, 1%) !default;
 
 /* Set the primary and secondary color to contrast and fit with that background. */
