Add config option sass_transpiler
I do recommend using Dart Sass, but until the installation of that with Hugo gets a little more streamlined, we may as well also support libsass as long as that
is possible:

```toml
[params]
    [params.galleriesdeluxe]
        # One of dartsass or libsass.
        sass_transpiler = "libsass"
```

Closes #1

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -29,7 +29,8 @@
 
     {{/* Load styles */}}
     {{ $vars := site.Params.galleriesdeluxe.sassvars | default dict }}
-    {{ $options := dict "enableSourceMap" true "transpiler" "dartsass" "vars" $vars }}
+    {{ $transpiler := site.Params.galleriesdeluxe.sass_transpiler | default "dartsass" }}}
+    {{ $options := dict "enableSourceMap" true "transpiler" $transpiler "vars" $vars }}
     {{ if hugo.IsProduction }}
       {{ $options = $options | merge (dict "enableSourceMap" false "outputStyle" "compressed") }}
     {{ end }}
