Remove extra } from transpile line

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -29,7 +29,7 @@
 
     {{/* Load styles */}}
     {{ $vars := site.Params.galleriesdeluxe.sassvars | default dict }}
-    {{ $transpiler := site.Params.galleriesdeluxe.sass_transpiler | default "dartsass" }}}
+    {{ $transpiler := site.Params.galleriesdeluxe.sass_transpiler | default "dartsass" }}
     {{ $options := dict "enableSourceMap" true "transpiler" $transpiler "vars" $vars }}
     {{ if hugo.IsProduction }}
       {{ $options = $options | merge (dict "enableSourceMap" false "outputStyle" "compressed") }}
