--- a/layouts/partials/galleriesdeluxe/get-gallery.html
+++ b/layouts/partials/galleriesdeluxe/get-gallery.html
@@ -10,7 +10,7 @@
 {{ end }}
 
 {{ with $images }}
-  {{ $id := $.RelPermalink | crypto.FNV32a }}
+  {{ $id := $.RelPermalink | hash.FNV32a }}
   {{ $idx :=  mod $id (len $images) }}
   {{ $first := index $images $idx }}
   {{ $thumb := $first.Fill "400x264 smart" }}
